--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   # The Multi-DB MCP Server
   mcp-server:
     build: .
+    image: try-3mcp-mcp-server
     container_name: mcp-server
     environment:
       - REDIS_URL=redis://redis:6379
